# data_engineering

01_orchestrators/04_dagster/: README.md  pyproject.toml  setup.cfg  setup.py  weather_data.db
01_orchestrators/04_dagster/tmp5sqw1x6z/history/: runs.db
01_orchestrators/04_dagster/tmp5sqw1x6z/history/runs/: 3287603b-cbd9-4786-9ef6-f68ed22e029c.db  3ed0927e-7e91-4838-ac98-6cae2b7dae31.db  4643d73b-a8ed-47eb-9c10-536069c805f5.db  46f0eca8-e629-4e7c-a785-c52395bc60b3.db  4cd61c0d-519b-491b-ae80-f8e9acc9acc0.db  4e04c6db-0b9c-4890-b7d7-8c485c73f538.db  5746a95f-94d9-4306-9e19-61b250bb8334.db  59ffc342-16f6-4bb3-8051-43784e842831.db  5d8cac56-644f-4fca-aeb0-f62872ccd1d0.db  65fc14d2-a485-42f2-8bd9-fbeda0e1c64f.db  663c36b0-c343-4689-989e-cc9c4fcec669.db  69a7c00e-6e51-4877-b4b1-783c94609423.db  6babd605-bc9a-46b6-8bd7-76a9a7785e50.db  91e3b290-6c37-4e23-b300-291d7a926280.db  9803069f-3f0f-4df4-9f29-a7c9ef44f8ff.db  a5c69882-07ff-4a2a-a2d5-312a8cf95edb.db  index.db  (+14 more)
01_orchestrators/04_dagster/tmp5sqw1x6z/schedules/: schedules.db
01_orchestrators/04_dagster/tmp5sqw1x6z/storage/: fetch_weather
01_orchestrators/04_dagster/tmpn0rfb13r/history/: runs.db
01_orchestrators/04_dagster/tmpn0rfb13r/schedules/: schedules.db
01_orchestrators/04_dagster/tmppe2fye5b/history/: runs.db
01_orchestrators/04_dagster/tmppe2fye5b/schedules/: schedules.db
01_orchestrators/04_dagster/weather_project/: assets.py  definitions.py
01_orchestrators/04_dagster/weather_project/utils/: daily_weather.py  global_weather.py  hourly_weather.py  tables.py  weather_utils.py
(+97 files in other folders)
